# plato-music-sync

./: AGENT.md  Cargo.toml  DEVELOPER_GUIDE.md  PLUG_AND_PLAY.md  README.md  TUTORIAL.md
memory/: JOURNAL.md
src/: cadence.rs  counterpoint.rs  groove.rs  lib.rs  polyrhythm.rs  tempo.rs
tests/: integration.rs
